--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -3,6 +3,7 @@ $colorTheme1: #008726;
 $colorTheme2: #94a187;
 $colorTheme3: linear-gradient(90deg, rgba(0,135,38,1) 0%, rgba(50,185,44,1) 100%);
 $colorTheme4: #272d2d;
+
 *{
     margin: 0;
     padding: 0;
@@ -158,7 +159,7 @@ $colorTheme4: #272d2d;
             }
             h1{
                 font-size: 43px;
-                color: $colorTheme1;
+                color: var(--colorTheme1, $colorTheme1);
                 &::before{
                     content: "Hi, my name is \A";
                     color: black;
